@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-10-05T16:25:06Z",
+  "timestamp" : "2022-10-06T00:41:55Z",
   "count_outdated" : 642,
   "uniques_outdated" : 132,
-  "count" : 643,
-  "uniques" : 133,
+  "count" : 648,
+  "uniques" : 134,
   "views" : [
     {
       "timestamp": "2022-09-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
