@@ -1,10 +1,15 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 6,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-09-26T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
+      "count": 5,
       "uniques": 1
     }
   ]
