@@ -1,3 +1,11 @@
+2022-10-06T00:41:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3193688230
+* notice: last 14d: unq all: 2 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 132 642 / 133 643
+* notice: next accum: outdated-unq outdated-all / unq all: 132 642 / 134 648
+* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
+* notice: removed / changed dates: [] / [2022-10-05]
+
 2022-10-05T16:25:06Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3191041091
 * notice: last 14d: unq all: 1 1
